--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "username": "vladislav",
+    "password": "123",
+    "database": "areal_db",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres",
+    "port": 5432
   },
   "test": {
     "username": "root",
